--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.android.support:design:25.3.1'
+
+    // butterknife deps
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+    // testing dependencies
     testCompile 'junit:junit:4.12'
 }
